src/widget/Accordion/Accordion.module.css
.section {
  position: relative;
  min-height: 340px;
}

.imgWrapper {
  position: absolute;
  z-index: -1;
  top: -36%;
  left: -58%;
  opacity: 0.5;
  transform: rotate(-13.123deg);
  width: 463px;
  height: 372px;
}

.imgWrapper img {
  width: 100%;
  height: 100%;
}

.container {
  display: flex;
  flex-direction: column;
  margin: auto;
  height: auto;
  background-color: transparent;
}

@media screen and (width>=450px) {
  .imgWrapper {
    left: -30%;
  }
}

@media screen and (width>=744px) {
  .imgWrapper {
    left: -20%;
  }
}

@media screen and (width>=1200px) {
  .container {
    max-width: 1199px;
  }

  .imgWrapper {
    top: -80%;
    left: -25%;
    transform: rotate(0deg);
    width: 709px;
    height: 570px;
  }
}

@media screen and (width>=1440px) {
  .imgWrapper {
    top: -100%;
    left: -25%;
    width: 852px;
    height: 684px;
  }
}

@media screen and (width>=1920px) {
  .imgWrapper {
    top: -140%;
    left: -21%;
    width: 1135px;
    height: 912px;
  }
}

